--- a/src/Components/ConversationHeader/styles.css
+++ b/src/Components/ConversationHeader/styles.css
@@ -42,8 +42,3 @@
 }
 
 
-@media (max-width: 650px) {
-    .ConversationHeader__Avatar {
-
-    }
-}
