--- a/src/index.css
+++ b/src/index.css
@@ -3,33 +3,34 @@
 html,
 body,
 #root {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Fira Sans', sans-serif;
-  font-weight: 400;
+    margin: 0;
+    padding: 0;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 400;
+    overflow-x: hidden;
 }
 
 button,
 input[type="submit"],
 input[type="reset"] {
-  background: none;
-  color: transparent;
-  border: none;
-  padding: 0;
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
-  text-align: left;
-  padding: 2%;
+    background: none;
+    color: transparent;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    text-align: left;
+    padding: 2%;
 }
 
 h3 {
-    margin-block-start: 0!important;
-    margin-block-end: 0!important;
-    font-weight: 400!important;
+    margin-block-start: 0 !important;
+    margin-block-end: 0 !important;
+    font-weight: 400 !important;
     color: white;
 }
